temp/lmgc90_dev/src/ChiPy/mailx/wrap_multiMAILx.h

 
  extern "C" void multiMAILx_UpdateBulk(int * ivector_in=nullptr, int ilength_in=0);
  extern "C" void multiMAILx_UpdateDof(int * ivector_in=nullptr, int ilength_in=0);
  extern "C" int multiMAILx_GetScalarFieldRank(int ibdyty, int blmty, char* name);
  extern "C" void multiMAILx_SetScalarFieldByNode(int IdBody, int f_rank, double * rvector_in, int rlength_in);
  extern "C" void multiMAILx_SetScalarFieldByElement(int IdBody, int f_rank, double * rvector_in, int rlength_in);
  extern "C" int multiMAILx_GetVectorFieldRank(int ibdyty, int blmty, char* name);
  extern "C" void multiMAILx_SetVectorFieldByNode(int ibdyty, int f_rank, double * matrix_in, int dim1, int dim2);
  extern "C" void multiMAILx_SetVectorFieldByElement(int ibdyty, int f_rank, double * matrix_in, int dim1, int dim2);
  extern "C" void multiMAILx_GetConnectivity(int idBody, int ** i4_vector, int * i4_size );
  extern "C" void multiMAILx_GetCoor(int idBody, double ** matrix_out, int * dim1, int * dim2);
  extern "C" void multiMAILx_GetAll(int idBody, double ** matrix_out, int * dim1, int * dim2);
  extern "C" void multiMAILx_GetElementsVolume(int idBody, double** r8_vector, int* r8_size );
  extern "C" void multiMAILx_GetElementsNeighbor(int idBody, double tol, int max_neighbors, int** matrix_out, int* dim1, int* dim2);
  extern "C" void multiMAILx_GetPtrElementsEnergy(int idBody, double** pointer_out, int* length);
  extern "C" void multiMAILx_ComputeElementsEnergy(int idBody);
  extern "C" void multiMAILx_GetPtrElementsJacobian(int idBody, double** pointer_out, int* length);
  extern "C" void multiMAILx_ComputeElementsJacobian(int idBody);
  extern "C" void multiMAILx_GetPtrElementsVisibility(int idBody, int ** pointer_out, int * length);
  extern "C" double multiMAILx_GetDeformationEnergy(int ivalue1, double * matrix_in, int dim1, int dim2);
  extern "C" void multiMAILx_GetPtrBoundaryElements(int idBody, int ** i4_vector, int * i4_size );
  extern "C" void multiMAILx_CleanMemory(void);