external/lmgc90_dev-fortran_lib/src/ChiPy/mailx/wrap_multiMAILx.f90


    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call compute_flux_multiMAILx(i)
        call compute_flourxces_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call compute_flux_multiMAILX(list(i))
        call compute_flourxces_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  subroutine UpdateBulk(list_ids, length) bind(c, name='multiMAILx_UpdateBulk')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] update bulk ')
    call start_itimer(timer_id)

    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call compute_flux_multiMAILx(i)
        call update_bulk_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call compute_flux_multiMAILx(list(i))
        call update_bulk_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  subroutine UpdateDof(list_ids, length) bind(c, name='multiMAILx_UpdateDof')
    use timer
    implicit none
    type(c_ptr),    intent(in), value :: list_ids
    integer(c_int), intent(in), value :: length
    !
    integer(kind=4) :: i
    integer(kind=4), save :: timer_id = 0
    integer(kind=4), dimension(:), pointer :: list

    if( get_nb_multiMAILx() < 1 ) return

                                                     !12345678901234567890
    if( timer_id == 0 ) timer_id = get_new_itimer_ID('[multM] update dof  ')
    call start_itimer(timer_id)

    if( length == 0 ) then  
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, get_nb_multiMAILx()
        call update_dof_multiMAILx(i)
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    else
      call c_f_pointer(cptr=list_ids, fptr=list, shape=(/length/))
      !$OMP PARALLEL DEFAULT(SHARED) PRIVATE(i)
      !$OMP DO SCHEDULE(RUNTIME)
      do i = 1, length
        call update_dof_multiMAILx(list(i))
      end do
      !$OMP END DO
      !$OMP END PARALLEL
    end if

    call stop_itimer(timer_id)

  end subroutine

  function getScalarFieldRank(ibdyty, iblmty, name) bind(c, name='multiMAILx_GetScalarFieldRank')
    implicit none
    integer(c_int), intent(in), value :: ibdyty
    integer(c_int), intent(in), value :: iblmty
    character(c_char), dimension(*)   :: name
    integer(c_int) :: getScalarFieldRank
    !
    integer(kind=4)   :: i
    character(len=30) :: f_name

    f_name = ''
    i = 1
    do while( name(i) /= c_null_char .and. i <= 30 )
      f_name = f_name(1:i-1) // name(i)
      i = i+1
    end do

    getScalarFieldRank = get_field_rank(ibdyty, iblmty, f_name)

  end function

  subroutine SetScalarFieldByNode(IdBody,f_rank,f,f_size) bind(c, name='multiMAILx_SetScalarFieldByNode')
    implicit none
    integer(c_int), intent(in), value :: idbody,f_rank,f_size
    real(c_double), intent(in), dimension(f_size) :: f
   
    call set_field_bynode(IdBody,f_rank,f_size,f)

  end subroutine

  subroutine SetScalarFieldByElem(ibdyty,f_rank,f,f_size) bind(c, name='multiMAILx_SetScalarFieldByElement')
    implicit none
    integer(c_int), intent(in), value :: ibdyty, f_rank, f_size
    real(c_double), intent(in), dimension(f_size) :: f

    call set_field_byelem(ibdyty,f_rank,f_size,f)

  end subroutine

  function getVectorFieldRank(ibdyty, iblmty, name) bind(c, name='multiMAILx_GetVectorFieldRank')
    implicit none
    integer(c_int), intent(in), value :: ibdyty
    integer(c_int), intent(in), value :: iblmty
    character(c_char), dimension(*)   :: name
    integer(c_int) :: getVectorFieldRank
    !
    integer(kind=4)   :: i
    character(len=30) :: f_name

    f_name = ''
    i = 1
    do while( name(i) /= c_null_char .and. i <= 30 )
      f_name = f_name(1:i-1) // name(i)
      i = i+1
    end do

    getVectorFieldRank = get_vfield_rank(ibdyty, iblmty, f_name)

  end function

  subroutine SetVectorFieldByNode(ibdyty,f_rank,f,f_size1,f_size2) bind(c, name='multiMAILx_SetVectorFieldByNode')
    implicit none
    integer(c_int), intent(in), value :: ibdyty,f_rank,f_size1,f_size2
    real(c_double), intent(in), dimension(f_size2,f_size1) :: f

    call set_vfield_bynode(ibdyty,f_rank,f,f_size2,f_size1)

  end subroutine

  subroutine SetVectorFieldByElem(ibdyty,f_rank,f,f_size1,f_size2) bind(c, name='multiMAILx_SetVectorFieldByElement')
    implicit none
    integer(c_int), intent(in), value :: ibdyty,f_rank,f_size1,f_size2
    real(c_double), intent(in), dimension(f_size2,f_size1) :: f

    call set_vfield_byelem(ibdyty,f_rank,f,f_size2,f_size1)

  end subroutine

  subroutine GetConnectivityMultiMAILx(idBody, ptr, dim1) BIND(c, name='multiMAILx_GetConnectivity')
    implicit none
    integer(c_int), intent(in), value :: IdBody
    type(c_ptr)    :: ptr
    integer(c_int) :: dim1
    !
    integer(kind=4), dimension(:), pointer :: all

    all => get_connectivities_multiMAILx(idBody)

    if( associated(all) ) then
      ptr  = c_loc(all(1))
      dim1 = size(all)
    else
      ptr  = c_null_ptr
      dim1 = 0
    end if

  end subroutine GetConnectivityMultiMAILx

  subroutine GetCoorMultiMAILx(idBody, ptr, dim1, dim2) BIND(c, name='multiMAILx_GetCoor')
    implicit none
    integer(c_int), intent(in), value :: IdBody
    type(c_ptr)    :: ptr
    integer(c_int) :: dim1, dim2
    !
    real(kind=8), dimension(:,:), pointer :: all

    all => get_coor_multiMAILx(idBody)

    if( associated(all) ) then
      ptr  = c_loc(all(1,1))
      dim1 = size(all,1)
      dim2 = size(all,2)
    else
      ptr  = c_null_ptr
      dim1 = 0
      dim2 = 0
    end if

  end subroutine GetCoorMultiMAILx

  subroutine GetAllMultiMAILx(idBody,ptr, dim1, dim2) BIND(c, name='multiMAILx_GetAll')
    implicit none
    integer(c_int), intent(in), value :: IdBody
    type(c_ptr)    :: ptr
    integer(c_int) :: dim1, dim2
    !
    real(kind=8), dimension(:,:), pointer :: all

    all => get_all_multiMAILx(idBody)

    if( associated(all) ) then
      ptr  = c_loc(all(1,1))
      dim1 = size(all,1)
      dim2 = size(all,2)
    else
      ptr  = c_null_ptr
      dim1 = 0
      dim2 = 0
    end if

  end subroutine GetAllMultiMAILx

  subroutine GetElementsVolume(idBody, ptr, length) bind(c, name='multiMAILx_GetElementsVolume')
    implicit none
    integer(c_int), intent(in), value :: IdBody
    type(c_ptr)    :: ptr
    integer(c_int) :: length
    !
    real(kind=8), dimension(:), pointer :: Volumes       

    Volumes => get_elements_volume(idBody)

    if( associated(Volumes) ) then
      ptr  = c_loc(Volumes(1))
      length = size(Volumes)
    else
      ptr  = c_null_ptr
      length = 0
    end if

  end subroutine

  subroutine GetElementsNeighbor(idBody, tol, maxnb, ptr, dim1, dim2) bind(c, name='multiMAILx_GetElementsNeighbor')
    implicit none
    integer(c_int), intent(in), value :: IdBody, maxnb
    real(c_double), intent(in), value :: tol                   
    type(c_ptr)    :: ptr
    integer(c_int) :: dim1, dim2
    !
    integer(c_int), dimension(:,:), pointer :: Neighbors       

    Neighbors => get_elements_neighbor(idBody,tol,maxnb) 

    if( associated(Neighbors) ) then
      ptr  = c_loc(Neighbors(1,1))
      dim1 = size(Neighbors,1)
      dim2 = size(Neighbors,2)
    else
      ptr  = c_null_ptr
      dim1 = 0
      dim2 = 0
    end if

  end subroutine

  subroutine GetPtrElementsEnergy(idBody, ptr, length) bind(c, name='multiMAILx_GetPtrElementsEnergy')
    implicit none
    integer(c_int), intent(in), VALUE :: IdBody
    type(c_ptr)    :: ptr
    integer(c_int) :: length
    !
    real(c_double), dimension(:), pointer :: Energies       

    Energies => get_ptr_elements_energy(idBody)

    if( associated(Energies) ) then
      ptr  = c_loc(Energies(1))
      length = size(Energies)
    else
      ptr  = c_null_ptr
      length = 0
    end if

  end subroutine

  subroutine ComputeElementsEnergy(idBody) bind(c, name='multiMAILx_ComputeElementsEnergy')
    implicit none
    integer(c_int), intent(in), value :: IdBody

    call compute_elements_energy(idBody)

  end subroutine

  subroutine GetPtrElementsJacobian(idBody, ptr, length) bind(c, name='multiMAILx_GetPtrElementsJacobian')
    implicit none
    integer(c_int), intent(in), value :: IdBody
    type(c_ptr)    :: ptr
    integer(c_int) :: length
    !
    real(kind=8), dimension(:), pointer :: Jacobians       

    Jacobians => get_ptr_elements_jacobian(idBody)

    if( associated(Jacobians) ) then
      ptr  = c_loc(Jacobians(1))
      length = size(Jacobians)
    else
      ptr  = c_null_ptr
      length = 0
    end if

  end subroutine

  subroutine ComputeElementsJacobian(idBody) bind(c, name='multiMAILx_ComputeElementsJacobian')
    implicit none
    integer(c_int), intent(in), value :: IdBody

    call compute_elements_jacobian(idBody)

  end subroutine

  subroutine GetPtrElementsVisibility(idBody, ptr, dim1) bind(c, name='multiMAILx_GetPtrElementsVisibility')
    implicit none
    integer(c_int), intent(in), value :: IdBody
    type(c_ptr)    :: ptr
    integer(c_int) :: dim1
    !
    integer(kind=4), dimension(:), pointer :: all

    all => get_ptr_elements_visibility(idBody)

    if( associated(all) ) then
      ptr  = c_loc(all(1))
      dim1 = size(all)
    else
      ptr  = c_null_ptr
      dim1 = 0
    end if

  end subroutine 

  function GetDeformationEnergy(ivalue1,rvect,ivalue2,ivalue3) bind(c, name='multiMAILx_GetDeformationEnergy')
    implicit none
    integer(c_int), intent(in), value :: ivalue1,ivalue2,ivalue3
    real(c_double), intent(in)        :: rvect(ivalue3,ivalue2)
    !
    real(c_double) :: GetDeformationEnergy

    GetDeformationEnergy = get_deformation_energy(ivalue1,rvect)

  end function

  subroutine GetPtrBoundaryElements(idBody, ptr, dim1) BIND(c, name='multiMAILx_GetPtrBoundaryElements')
      implicit none
      INTEGER(C_INT), INTENT(IN), VALUE :: IdBody

      type(c_ptr)    :: ptr
      integer(c_int) :: dim1

      INTEGER(C_INT),dimension(:),pointer  :: Elements       

      Elements => Get_Ptr_Boundary_Elements(idBody) 

      if( associated(Elements) ) then
        ptr  = c_loc(Elements(1))
        dim1 = size(Elements)
      else
        ptr  = c_null_ptr
        dim1 = 0
      end if

    end subroutine

  subroutine CleanMemory() bind(c, name='multiMAILx_CleanMemory')
    implicit none

    call clean_memory_multiMAILx

  end subroutine

end module wrap_multiMAILx
